Minor text updates to career

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -140,8 +140,6 @@
 						<p class="">
 							<a href="#bmText">
 							Läs mer nedan
-							<br>
-							v
 						</a>
 						</p>
 					</div>
@@ -163,20 +161,20 @@
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vill du...</h1>
 								<ul class="items-32">
-									<li class="fix-4-12 toLeft text-32">
-										<p class="ae-4">− Utveckla din kompetens i ett trivsamt och intressant företag? </p>
+									<li class="fix-4-12 toLeft">
+										<p class="">− Utveckla din kompetens i ett trivsamt och intressant företag? </p>
 									</li>
-									<li class="fix-4-12 toLeft text-32">
-										<p class="ae-6">− Arbeta i det företag som leder branschens förnyelse?</p>
+									<li class="fix-4-12 toLeft">
+										<p class="">− Arbeta i det företag som leder branschens förnyelse?</p>
 									</li>
-									<li class="fix-4-12 toLeft text-32">
-										<p class="ae-6">− Kunna belönas bra för ambitiösa arbetsinsatser?</p>
+									<li class="fix-4-12 toLeft">
+										<p class="">− Kunna belönas bra för ambitiösa arbetsinsatser?</p>
 									</li>
-									<li class="fix-4-12 toLeft text-32">
-										<p class="ae-6">− Bli medarbetare oavsett var i landet du bor?</p>
+									<li class="fix-4-12 toLeft">
+										<p class="">− Bli medarbetare oavsett var i landet du bor?</p>
 									</li>
-									<li class="fix-4-12 toLeft text-32">
-										<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Öppna kontaktformuläret</a>
+									<li class="fix-4-12 toLeft">
+										<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Ta kontakt med oss!</a>
 										<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
 									</li>
