removed footer AE effects

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Besiktningsman.se | Vårt erbjudande</title>
+	<title>Besiktningsman.se | Erbjudande</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -44,7 +44,7 @@
 	    created_at: <%= current_user.created_at.to_i %>, // Signup date as a Unix timestamp
 			hide_default_launcher: true
 	  };
-	  </script>
+	</script>
 	<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/ybt1le09';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 	<!-- Intercom chat and user identification -->
 
@@ -138,18 +138,18 @@
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
-							<h1 class="">Vårt erbjudande</h1>
-							<!-- <a href="#foretag" class="menu inlineBlock margin-right-2 underline"><h3 class="text">Företag</h3></a>
-							<a href="#brf" class="menu inlineBlock underline"><h3 class="text">BRF</h3></a>
-							<a href="#privat" class="menu inlineBlock margin-left-2 underline"><h3 class="text">Privat</h3></a> -->
+						<h1 class="">Vårt erbjudande</h1>
+						<!-- <a href="#foretag" class="menu inlineBlock margin-right-2 underline">Företag</a>
+						<a href="#brf" class="menu inlineBlock underline">BRF</a>
+						<a href="#privat" class="menu inlineBlock margin-left-2 underline">Privat</a> -->
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(../assets/img/backgrounds/skeppsbron_1901.jpg)"></div>
+		<div class="background" style="background-image:url(../assets/img/backgrounds/skeppsbron_1901.jpg)" alt="Bakgrundsbild av Skeppsbron"></div>
 	</section>
 	<!-- Slide #32 -->
-	<section class="slide whiteSlide kenBurns fromLeft" data-name="foretag" data-title="Företag" id="foretag">
+	<section class="slide whiteSlide kenBurns fromLeft" data-name="foretag">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -158,8 +158,8 @@
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Entreprenadbesiktning för nyproduktion och ROT</h1>
-								<div class="ae-3">
-									<p style="font-size: 22px;">
+								<div class="">
+									<p>
 										Vi erbjuder ett komplett utbud av entreprenadbesiktningstjänster för nyproduktion och ROT.
 									</p>
 									<p>
@@ -174,14 +174,14 @@
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
-										<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-
-										<!-- <a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a> -->
+										<script>
+											(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()
+										</script>
 									</li>
 								</ul>
 							</li>
 							<li class="col-6-12 left ae-1 fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow" width="1200" style="border-radius: 8px;" src="../assets/img/backgrounds/goldengate.jpg" alt="Bild av byggare på Golden Gate Bridge" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow" width="1200" style="border-radius: 8px;" src="../assets/img/backgrounds/goldengate.jpg" alt="Foto av byggare på Golden Gate Bridge" />
 							</li>
 						</ul>
 					</div>
@@ -190,7 +190,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="slide whiteSlide kenBurns fromRight" data-name="brf" data-title="BRF" id="brf">
+	<section class="slide whiteSlide kenBurns fromRight" data-name="brf" data-title="brf" id="brf">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -202,7 +202,7 @@
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
-								<div class="ae-3">
+								<div class="">
 									<p>
 										Besiktningsman.se erbjuder tjänster och besiktningsmän för samtliga fack för besiktning av nyproduktion och ROT-arbeten i bostadrättsfastigheter, samt KA-ansvariga.
 									</p>
@@ -225,7 +225,7 @@
 		</div>
 
 	</section>
-	<section class="slide whiteSlide kenBurns fromLeft" data-name="privat" data-title="Privat" id="privat">
+	<section class="slide whiteSlide kenBurns fromLeft" data-name="privat" data-title="privat" id="privat">
 		<div class="content">
 			<div class="container">
 				<div class="container-lg">
@@ -248,7 +248,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left ae-1 fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow" width="800" style="border-radius: 8px;" src="../assets/img/backgrounds/village_houses.jpg" alt="Foto av ett gammalt landshus" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow" width="800" style="border-radius: 8px;" src="../assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten" />
 							</li>
 						</ul>
 					</div>
@@ -263,10 +263,10 @@
 				<div class="wrap">
 
 					<ul class="grid fixedSpaces left">
-						<li class="col-5-10 wide-col ae-3">
+						<li class="col-5-10 wide-col">
 							<a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
 						</li>
-						<li class="col-5-10 ae-3">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Kontor</h3>
 							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
 							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
@@ -274,7 +274,7 @@
 							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
 							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
 						</li>
-						<li class="col-5-10 ae-3">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Se mer</h3>
 							<p><a href="../om_oss/">Om oss</a></p>
 							<p><a href="../karriar/">Karriär</a></p>
@@ -283,7 +283,7 @@
 							<p><a href="../kontakt/">Kontakt</a></p>
 							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
-						<li class="col-5-10 ae-4">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Länkar</h3>
 							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
 							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
@@ -291,7 +291,7 @@
 							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
 							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
 						</li>
-						<li class="col-5-10 ae-5">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Följ oss</h3>
 							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
 							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
