--- a/karriar/index.html
+++ b/karriar/index.html
@@ -140,7 +140,7 @@
 						<p class="">
 							<a href="#bmText">
 							Läs mer nedan
-						</a>
+							</a>
 						</p>
 					</div>
 				</div>
@@ -196,10 +196,10 @@
 				<div class="container-lg">
 
 					<ul class="grid fixedSpaces left">
-						<li class="col-5-10 wide-col ae-3">
+						<li class="col-5-10 wide-col">
 							<a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
 						</li>
-						<li class="col-5-10 ae-3">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Kontor</h3>
 							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
 							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
@@ -207,7 +207,7 @@
 							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
 							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
 						</li>
-						<li class="col-5-10 ae-3">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Se mer</h3>
 							<p><a href="../om_oss/">Om oss</a></p>
 							<p><a href="../karriar/">Karriär</a></p>
@@ -216,7 +216,7 @@
 							<p><a href="../kontakt/">Kontakt</a></p>
 							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
-						<li class="col-5-10 ae-4">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Länkar</h3>
 							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
 							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
@@ -224,7 +224,7 @@
 							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
 							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
 						</li>
-						<li class="col-5-10 ae-5">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Följ oss</h3>
 							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
 							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
