--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -136,13 +136,12 @@
 					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected">
-							<h3 class="pad-header">
+							<h3 class="pad-header margin-0">
 								Inte tid till att ringa?
 								<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 							</h3>
 							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/oZw406" style="width: 100%; height: 400px;" ></div>
 							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-							<br>
 							<div class="pad-header">
 								<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
 							</div>
@@ -198,10 +197,10 @@
 				<div class="container-lg">
 
 					<ul class="grid fixedSpaces left">
-						<li class="col-5-10 wide-col ae-3">
+						<li class="col-5-10 wide-col">
 							<a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
 						</li>
-						<li class="col-5-10 ae-3">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Kontor</h3>
 							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
 							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
@@ -209,7 +208,7 @@
 							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
 							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
 						</li>
-						<li class="col-5-10 ae-3">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Se mer</h3>
 							<p><a href="../om_oss/">Om oss</a></p>
 							<p><a href="../karriar/">Karriär</a></p>
@@ -218,7 +217,7 @@
 							<p><a href="../kontakt/">Kontakt</a></p>
 							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
 						</li>
-						<li class="col-5-10 ae-4">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Länkar</h3>
 							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
 							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
@@ -226,7 +225,7 @@
 							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
 							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
 						</li>
-						<li class="col-5-10 ae-5">
+						<li class="col-5-10">
 							<h3 class="margin-bottom-1">Följ oss</h3>
 							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
 							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
