--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -137,10 +137,10 @@
 					<div class="fix-5-12">
 						<div class="pad shadow selected">
 							<h3 class="pad-header margin-0">
-								Inte tid till att ringa?
+								Inte tid att ringa?
 								<p class="small bold dark margin-0" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
 							</h3>
-							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/oZw406" style="width: 100%; height: 400px;" ></div>
+							<div class="typeform-widget" data-url="https://besiktningsman-se.typeform.com/to/Qwy9Nf" style="width: 100%; height: 300px;" ></div>
 							<script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
 							<div class="pad-header">
 								<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
