career tags > rekrytering

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -137,18 +137,14 @@
 				<div class="wrap">
 					<div class="container-lg padding-top-10" style="padding-top: 9%;">
 						<h1 class="">Sveriges ledande entreprenadbesiktningsföretag <br>söker fler besiktningsmän!</h1>
-						<p class="">
-							<a href="#bmText">
-							Läs mer nedan
-							</a>
-						</p>
+						<a href="#rekrytering" class="underline"><h3>Läs mer nedan</h3></a>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="background" style="background-image:url(../assets/img/ispect/bm_ipad.jpg)"></div>
 	</section>
-	<section class="slide whiteSlide kenBurns fromRight" data-name="bmText">
+	<section class="slide whiteSlide kenBurns fromRight" data-name="rekrytering" data-title="rekrytering" id="rekrytering">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -303,6 +299,9 @@
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
 	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
+	<script>
+  	window.setHashLink = 1;
+	</script>
 </body>
 
 </html>
