--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<p>
 									Besiktningsman.se erbjuder entreprenadbesiktning som ger sänkt kostnad och ökad lönsamhet i projekt, samt möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.
 								</p>
-								<a href="kontakt/" class="common-Button blue text-white">kontakta oss</a>
+								<a href="kontakt/" class="common-Button blue text-white">Vill du veta mer? Hör av dig</a>
 							</li>
 							<div class="col-6-12 left fromRight">
 								<p class="small text-blueGrey margin-bottom-2" style="">Kvar av projektets avkastning fram till garantiperiodens utgång efter 10 år. Ett exempel.</p>
