erbjudande header links finally work

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -139,9 +139,9 @@
 				<div class="wrap">
 					<div class="fix-10-12" style="padding-top: 5%;">
 						<h1 class="">Vårt erbjudande</h1>
-						<!-- <a href="#foretag" class="menu inlineBlock margin-right-2 underline">Företag</a>
-						<a href="#brf" class="menu inlineBlock underline">BRF</a>
-						<a href="#privat" class="menu inlineBlock margin-left-2 underline">Privat</a> -->
+						<a href="#foretag" class="menu inlineBlock margin-right-2 underline"><h3>Företag</h3></a>
+						<a href="#brf" class="menu inlineBlock underline"><h3>BRF</h3></a>
+						<a href="#privat" class="menu inlineBlock margin-left-2 underline"><h3>Privat</h3></a>
 					</div>
 				</div>
 			</div>
@@ -149,7 +149,7 @@
 		<div class="background" style="background-image:url(../assets/img/backgrounds/skeppsbron_1901.jpg)" alt="Bakgrundsbild av Skeppsbron"></div>
 	</section>
 	<!-- Slide #32 -->
-	<section class="slide whiteSlide kenBurns fromLeft" data-name="foretag">
+	<section class="slide whiteSlide kenBurns fromRight" data-name="foretag" data-title="foretag" id="foretag">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -893,6 +893,9 @@
 	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
 	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
 	<script src="../js/custom.js" type="text/javascript" name="main-scripts"></script>
+	<script>
+  	window.setHashLink = 1;
+	</script>
 </body>
 
 </html>
