Removed margins on paragraphs

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -166,15 +166,15 @@
 
 								<div class="soft-shadow border-radius padding-2" style="box-shadow: none;width: 100%">
 									<h3>Här finns Besiktningsman.se</h3>
-									<p>Vi expanderar och finns nära våra kunder.</p>
+									<p style="font-size: 16px;" class="bold">Vi expanderar och finns nära våra kunder.</p>
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
 
 										<aside class="headquarters white">
 											<h3 class="text-blue small bold">Huvudkontor</h3>
-											<p class="small bold" style="font-size:16px;">Heleneborgsgatan 54, Södermalm</p>
-											<p class="small bold" style="font-size: 16px;">11732 Stockholm</p>
+											<p class="small bold margin-0" style="font-size:16px;">Heleneborgsgatan 54, Södermalm</p>
+											<p class="small bold margin-0" style="font-size: 16px;">11732 Stockholm</p>
 										</aside>
 									</li>
 								</ul>
