--- a/karriar/index.html
+++ b/karriar/index.html
@@ -73,7 +73,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
@@ -120,7 +120,7 @@
 				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
+				<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
 				<br>
 				<br>
 				<li><a href="../nyheter/">Nyheter</a></li>
