--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -70,7 +70,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
@@ -116,7 +116,7 @@
 			<ul class="subMenu">
 				<br>
 				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
+				<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
 				<br>
 				<br>
 				<li><a href="../nyheter/">Nyheter</a></li>
