--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -69,7 +69,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
+					<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
 					<li><a href="../nyheter/">Nyheter</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
@@ -115,7 +115,7 @@
 			<ul class="subMenu">
 				<br>
 				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Blogg</a></li>
+				<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
 				<br>
 				<br>
 				<li><a href="../nyheter/">Nyheter</a></li>
