--- a/index.html
+++ b/index.html
@@ -599,55 +599,35 @@
 			</div>
 		</div>
 	</article>
+<!-- Footer -->
+<section class="slide white customFooter">
+  <div class="content">
+    <div class="container-lg">
+      <div class="wrap">
 
-	<!-- FOOTER -->
-	<section class="slide lighter-black autoHeight customFooter">
-		<div class="content">
-			<div class="container">
-				<div class="container-lg">
+        <div class="fix-10-12 center">
+					<img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;">
+          <p class="hero">Besiktning och KA-tjänster över hela landet</p>
+          <ul class="later center">
+            <li class="col-6-12 ae-3">
+              <h3 class="margin-bottom-1">Kontor</h3>
+              <a target="_blank" href="https://goo.gl/maps/H4bGBARF9f42"><p class="text-blue bold">Heleneborgsgatan 54, 11732</p></a>
+							<a href="tel:0101654000"><p class="text-blue bold">TEL: 010-165 40 00</p></a>
+            </li>
+            <li class="col-6-12 ae-5">
+              <h3 class="margin-bottom-1">Följ oss</h3>
+							<a target="_blank" href="https://medium.com/besiktningsbloggen"><p class="text-blue bold">Besiktningsbloggen</p></a>
+							<a target="_blank" href="https://twitter.com/BjornSelling"><p class="text-blue bold">Twitter</p></a>
+							<a target="_blank" href="https://www.facebook.com/Besiktningsman/"><p class="text-blue bold">Facebook</p></a>
+							<a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/"><p class="text-blue bold">Linkedin</p></a>
+            </li>
+          </ul>
+        </div>
 
-					<ul class="grid fixedSpaces left">
-						<li class="col-5-10 wide-col">
-							<a href="/" class="logo"><img src="assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
-						</li>
-						<li class="col-5-10">
-							<h3 class="margin-bottom-1">Kontor</h3>
-							<p><a href="mailto:stockholm@besiktningsman.se">Stockholm</a></p>
-							<p><a href="mailto:helsingborg@besiktningsman.se">Helsingborg</a></p>
-							<p><a href="mailto:goteborg@besiktningsman.se">Göteborg</a></p>
-							<p><a href="mailto:norrkoping@besiktningsman.se">Norrköping</a></p>
-							<p><a href="mailto:uppsala@besiktningsman.se">Uppsala</a></p>
-						</li>
-						<li class="col-5-10">
-							<h3 class="margin-bottom-1">Se mer</h3>
-							<p><a href="om_oss/">Om oss</a></p>
-							<p><a href="karriar/">Karriär</a></p>
-							<p><a href="nyheter/">Nyheter</a></p>
-							<p><a href="erbjudande/">Vårt erbjudande</a></p>
-							<p><a href="kontakt/">Kontakt</a></p>
-							<p class="popupTrigger" data-popup-id="policy">Våra policys</p>
-						</li>
-						<li class="col-5-10">
-							<h3 class="margin-bottom-1">Länkar</h3>
-							<p><a target="_blank" href="http://www.konsumentverket.se/">Konsumentverket</a></p>
-							<p><a target="_blank" href="http://sbr.se/">SBR</a></p>
-							<p><a target="_blank" href="http://www.boverket.se/sv/lag--ratt/">Boverket - byggregler</a></p>
-							<p><a target="_blank" href="https://byggtjanst.se/">Svensk byggtjänst</a></p>
-							<p><a target="_blank" href="http://www.maklarsamfundet.se/">Mäklarsamfundet</a></p>
-						</li>
-						<li class="col-5-10">
-							<h3 class="margin-bottom-1">Följ oss</h3>
-							<p><a target="_blank" href="https://medium.com/besiktningsbloggen">Besiktningsbloggen</a></p>
-							<p><a target="_blank" href="https://twitter.com/BjornSelling">Twitter</a></p>
-							<p><a target="_blank" href="https://www.facebook.com/Besiktningsman/">Facebook</a></p>
-							<p><a target="_blank" href="https://www.linkedin.com/in/bj%C3%B6rn-selling-10ab3942/">Linkedin</a></p>
-						</li>
-					</ul>
-
-				</div>
-			</div>
-		</div>
-	</section>
+      </div>
+    </div>
+  </div>
+</section>
 
 	<!-- POLICYS Popup Text -->
 	<div class="popup animated white" data-popup-id="policy">
