Updated ispect title

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 								<img class="macbook-61 margin-bottom-3 soft-shadow" width="1000" style="border-radius:8px;" src="assets/img/ispect/bm_ipad_overlay.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
 							</li>
 							<li class="col-6-12 left cell-32">
-								<h1 class="">iSpect ger snabb leverans av besiktningsutlåtandet.</h1>
+								<h1 class="">Vår digitala besiktningsprocess</h1>
 								<div class="">
 									<p>
 										iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.
@@ -581,26 +581,8 @@
 			</a>
 		</div>
 	</section>
-	<article class="globalFooterCTA" style="background: #f2f9ff;">
-		<div class="container-lg">
-			<div class="content-cta">
-				<h1 class="title">
-					Söker du besiktning för privatpersoner eller BRF?
-					<span class="subtitle text-blue"><a href="erbjudande/">Läs mer om våra besiktningstjänster</a></span>
-				</h1>
-			</div>
-			<div class="common-ButtonGroup buttons">
-				<a href="erbjudande/#brf" class="common-Button blue text-white bold">
-	      	Bostadsrättsföreningar
-				</a>
-				<a href="erbjudande/#privat" class="common-Button white text-blue bold">
-					Privatpersoner
-				</a>
-			</div>
-		</div>
-	</article>
 <!-- Footer -->
-<section class="slide white customFooter">
+<section class="slide customFooter" style="background: #f2f9ff;color: #333;">
   <div class="content">
     <div class="container-lg">
       <div class="wrap">
@@ -611,7 +593,7 @@
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
-              <a target="_blank" href="https://goo.gl/maps/H4bGBARF9f42"><p class="text-blue bold">Heleneborgsgatan 54, 11732</p></a>
+              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">Heleneborgsgatan 54, 11732</p></a>
 							<a href="tel:0101654000"><p class="text-blue bold">TEL: 010-165 40 00</p></a>
             </li>
             <li class="col-6-12 ae-5">
