Updated the nav bar on all pages - removed services subpage

--- a/index.html
+++ b/index.html
@@ -197,14 +197,7 @@
 				<li><a href="om_oss/">Om oss</a></li>
 				<br>
 				<br>
-			</ul>
-			<ul class="subMenu">
-				<br>
-				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
-				<br>
-				<br>
-				<li><a href="nyheter/">Nyheter</a></li>
+				<li><a href="nyheter/">Nyheter & Publicerat</a></li>
 			</ul>
 
 		</div>
@@ -225,7 +218,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/goldengate.jpg)"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/goldengate.jpg)" alt="Foto av Golden Gate under sin konstruktion"></div>
 	</section>
 	<!-- ENTERPRISE START -->
 	<section class="slide whiteSlide kenBurns fromLeft phones selected active animate">
