--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -70,8 +70,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
-					<li><a href="../nyheter/">Nyheter</a></li>
+					<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -80,15 +79,15 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kontakt</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:220px;"></a>
+				<a href="https://mavko.github.io/bm_se/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -100,7 +99,7 @@
 		<div class="content">
 			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
-				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+				<li><a href="#erbjudande">Vårt erbjudande</a></li>
 				<br>
 				<br>
 				<li><a href="../kontakt/">Kontakt</a></li>
@@ -112,18 +111,12 @@
 				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-			</ul>
-			<ul class="subMenu">
-				<br>
-				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
-				<br>
-				<br>
-				<li><a href="../nyheter/">Nyheter</a></li>
+				<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
 			</ul>
 
 		</div>
 	</nav>
+
 
 	<!-- typeform contact form -->
 	<section class="slide fade contact">
@@ -179,11 +172,7 @@
 									</li>
 								</ul>
 							</li>
-							<li class="col-6-12 left fromRight">
-								<div class="container-lg">
-									<img class="map map-position" width="1200" src="../assets/img/backgrounds/bm_map.svg" alt="iPad Image" />
-								</div>
-							</li>
+
 						</ul>
 					</div>
 
