--- a/karriar/index.html
+++ b/karriar/index.html
@@ -73,8 +73,7 @@
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
-					<li><a href="../nyheter/">Nyheter</a></li>
+					<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
@@ -83,15 +82,15 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kontakt</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:220px;"></a>
+				<a href="https://mavko.github.io/bm_se/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -103,7 +102,7 @@
 		<div class="content">
 			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
-				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+				<li><a href="/#erbjudande">Vårt erbjudande</a></li>
 				<br>
 				<br>
 				<li><a href="../kontakt/">Kontakt</a></li>
@@ -115,22 +114,14 @@
 				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-			</ul>
-			<ul class="subMenu">
-				<li><a href="../om_oss/">Om oss</a></li>
-				<br>
-				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
-				<br>
-				<br>
-				<li><a href="../nyheter/">Nyheter</a></li>
+				<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
 			</ul>
 
 		</div>
 	</nav>
 
+
 	<!-- INTRO SLIDE -->
-	<!-- Slide #55 -->
 	<section class="slide fade contact" id="">
 		<div class="content">
 			<div class="container" style="height:560px;">
