--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -67,31 +67,29 @@
 	  <symbol id="drop-down" viewBox="0 0 16 16"><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" points="1,5 8,12 15,5" fill="none"></polyline></symbol>
 	  <symbol id="play" viewBox="0 0 30 30"><path d="M7 30v-30l22 15z"/></symbol>
 	</svg>
-
 	<!-- Panel Top #10 -->
 	<nav class="panel top forceMobileView white soft-shadow">
 		<div class="sections desktop">
 			<div class="left">
 				<ul class="menu crop small bold">
-					<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
-					<li><a href="../nyheter/">Nyheter</a></li>
+					<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
 					<li><a href="../om_oss/">Om oss</a></li>
 				</ul>
 			</div>
 			<div class="center">
-				<a href="../"><img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+				<a href="../"> <img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+					<li><a href="#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
-					<li><a href="../kontakt/" class="text-blue" style="padding:5px 12px 5px 12px; border-radius: 4px;">Kontakt</a></li>
+					<li><a href="../kontakt/" class="text-blue">Kontakt</a></li>
 				</ul>
 			</div>
 		</div>
 		<div class="sections compact hidden">
 			<div class="left">
-				<a href="../"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+				<a href="https://mavko.github.io/bm_se/"><img src="../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
 			</div>
 			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
 		</div>
@@ -103,7 +101,7 @@
 		<div class="content">
 			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
-				<li><a href="../erbjudande/">Vårt erbjudande</a></li>
+				<li><a href="#erbjudande">Vårt erbjudande</a></li>
 				<br>
 				<br>
 				<li><a href="../kontakt/">Kontakt</a></li>
@@ -115,18 +113,12 @@
 				<li><a href="../om_oss/">Om oss</a></li>
 				<br>
 				<br>
-			</ul>
-			<ul class="subMenu">
-				<br>
-				<br>
-				<li><a href="http://medium.com/besiktningsbloggen">Nyheter & Publicerat</a></li>
-				<br>
-				<br>
-				<li><a href="../nyheter/">Nyheter</a></li>
+				<li><a href="../nyheter/">Nyheter & Publicerat</a></li>
 			</ul>
 
 		</div>
 	</nav>
+
 
 	<!-- Slide 1 (#19) -->
 	<section class="slide fade kenBurns" id="">
@@ -186,8 +178,16 @@
 					<div class="fix-10-12">
 						<!--  List one -->
 						<ul class="flex fixedSpaces later left margin-bottom-5">
-							<li class="col-3-12  ">
-								<!-- <img class="img-91 wide" src="../assets/img/team/marie_selling.jpg" alt="Image Thumbnail" /> -->
+							<li class="col-3-12">
+								<h3 class="ae-5">Magnus Janson</h3>
+								<div class="ae-6">
+									<p class="micro bold">Vice Direktör</p>
+									<a href="mailto:magnus.janson@besiktningsman.se">
+										<p class="micro bold text-blue">magnus.janson <br> @besiktningsman.se</p>
+									</a>
+								</div>
+							</li>
+							<li class="col-3-12">
 								<h3 class="ae-5">Marie Selling</h3>
 								<div class="ae-6">
 									<p class="micro bold">Projekt & Ekonomichef</p>
@@ -196,8 +196,7 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12  ">
-								<!-- <img class="img-91 wide" src="../assets/img/team/bjorn_selling.jpg" alt="Image Thumbnail" /> -->
+							<li class="col-3-12">
 								<h3 class="ae-5">Björn Selling</h3>
 								<div class="ae-6">
 									<p class="micro bold">Affärschef</p>
@@ -206,18 +205,18 @@
 									</a>
 								</div>
 							</li>
-							<li class="col-3-12  ">
-								<!-- <img class="img-91 wide" src="../assets/img/team/jonny_seidel.jpg" alt="Image Thumbnail" /> -->
+						</ul>
+						<ul class="flex fixedSpaces later left margin-bottom-5">
+							<li class="col-3-12">
 								<h3 class="ae-6">Jonny Seidel</h3>
 								<div class="ae-7">
-									<p class="micro bold">VD</p>
+									<p class="micro bold">Arbetande styrelseordförande</p>
 									<a href="mailto:jonny@besiktningsman.se">
 										<p class="micro bold text-blue">jonny@besiktningsman.se</p>
 									</a>
 								</div>
 							</li>
 							<li class="col-3-12  ">
-								<!-- <img class="img-91 wide" src="../assets/img/team/martin_viberg.jpg" style="width: 257px !important;" alt="Image Thumbnail" /> -->
 								<h3 class="ae-7">Martin Viberg</h3>
 								<div class="ae-8">
 									<p class="micro bold">Besiktningschef</p>
@@ -227,7 +226,6 @@
 								</div>
 							</li>
 						</ul>
-
 					</div>
 
 				</div>
@@ -270,7 +268,7 @@
 							<li class="col-2-12">
 								<div class=" wide equalElement ae-6">
 									<div class="cell">
-										<img width="120" src="../assets/img/logos/ikano-bostad.png" alt="ikano" />
+										<img width="120" src="../assets/img/logos/ikano_red.png" alt="ikano" />
 									</div>
 								</div>
 							</li>
