Image width size fixed on the career page

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -143,7 +143,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left ae-1 fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow" width="1000" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vill du...</h1>
