Added checkmarks to the first list on the landing page

--- a/index.html
+++ b/index.html
@@ -230,9 +230,15 @@
 						<ul class="flex reverse">
 							<li class="col-6-12 left cell-32">
 								<h1>Entreprenadbesiktning som ökar lönsamheten.</h1>
-								<p>
-									Besiktningsman.se erbjuder entreprenadbesiktning som ger sänkt kostnad och ökad lönsamhet i projekt, samt möjlighet att överlämna ett färdigt projekt med noll byggfel på avtalad dag.
-								</p>
+								<h3>Besiktningsman.se erbjuder entreprenadbesiktning med iSpect.</h3>
+									<ul>
+										<li><p class="small">Det ger er:</p></li>
+										<li><div class="checkmark"></div><p class="small">Sänkta kostnader i produktion och eftermarknad.</p></li>
+										<li><div class="checkmark"></div><p class="small" style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p></li>
+										<li><div class="checkmark"></div><p class="small">Säker och lättillgänglig dokumentation.</p></li>
+										<li><div class="checkmark"></div><p class="small">Tillgång till vår ”Byggfelsbank”.</p></li>
+									</ul>
+								<p class="popupTrigger text-blue bold small" data-popup-id="ispect-details">Vårt helhetskoncept med iSpect</p>
 								<a href="kontakt/" class="common-Button blue text-white">Vill du veta mer? Hör av dig</a>
 							</li>
 							<div class="col-6-12 left fromRight">
@@ -508,45 +514,38 @@
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vår digitala besiktningsprocess</h1>
-								<div class="">
-									<p>
-										iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.
-									</p>
-									<a class="margin-bottom-2 text-blue popupTrigger" data-popup-id="ispect-details">
-										<p>Vårt helhetskoncept med iSpect</p>
-									</a>
-								</div>
-								<ul class="items-32">
-									<li class="fix-4-12 toLeft text-32">
-										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
-										<script>
-											(function() {
-												var qs, js, q, s, d = document,
-													gi = d.getElementById,
-													ce = d.createElement,
-													gt = d.getElementsByTagName,
-													id = 'typef_orm_share',
-													b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-												if (!gi.call(d, id)) {
-													js = ce.call(d, 'script');
-													js.id = id;
-													js.src = b + 'share.js';
-													q = gt.call(d, 'script')[0];
-													q.parentNode.insertBefore(js, q)
-												}
-												id = id + '_';
-												if (!gi.call(d, id)) {
-													qs = ce.call(d, 'link');
-													qs.rel = 'stylesheet';
-													qs.id = id;
-													qs.href = b + 'share-button.css';
-													s = gt.call(d, 'head')[0];
-													s.appendChild(qs, s)
-												}
-											})()
-										</script>
-									</li>
-								</ul>
+								<h3>För ökad lönsamhet och leveranssäkerhet i byggprojekt</h3>
+								<p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
+								<a class="margin-bottom-2 text-blue popupTrigger" data-popup-id="ispect-details">
+									<p class="bold small">Vårt helhetskoncept med iSpect</p>
+								</a>
+								<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+								<script>
+									(function() {
+										var qs, js, q, s, d = document,
+											gi = d.getElementById,
+											ce = d.createElement,
+											gt = d.getElementsByTagName,
+											id = 'typef_orm_share',
+											b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+										if (!gi.call(d, id)) {
+											js = ce.call(d, 'script');
+											js.id = id;
+											js.src = b + 'share.js';
+											q = gt.call(d, 'script')[0];
+											q.parentNode.insertBefore(js, q)
+										}
+										id = id + '_';
+										if (!gi.call(d, id)) {
+											qs = ce.call(d, 'link');
+											qs.rel = 'stylesheet';
+											qs.id = id;
+											qs.href = b + 'share-button.css';
+											s = gt.call(d, 'head')[0];
+											s.appendChild(qs, s)
+										}
+									})()
+								</script>
 							</li>
 
 						</ul>
