--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 		<div class="background" style="background-image:url(assets/img/backgrounds/goldengate.jpg)" alt="Foto av Golden Gate under sin konstruktion"></div>
 	</section>
 	<!-- ENTERPRISE START -->
-	<section class="slide whiteSlide kenBurns fromLeft phones selected active animate">
+	<section class="slide whiteSlide kenBurns fromLeft phones selected active animate" id="entreprenad">
 		<div class="content">
 			<div class="container" style="height: 100% !important;">
 				<div class="wrap" style="display: block;">
