Updated news photo subtitle text color

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -142,7 +142,7 @@
 						</p>
 						<div class="ae-2 fromLeft left">
 							<img src="../assets/img/nyheter/rl_backakra.png" alt="Backåkra besiktningsfoto">
-							<p class="small bold" style="font-size: 18px;">Robert Lindblom från Besiktningsman.se utför entreprenadbesiktningen av Einar Mattssons nya projekt Backåkra.</p>
+							<p class="small text-blueGrey">Robert Lindblom från Besiktningsman.se utför entreprenadbesiktningen av Einar Mattssons nya projekt Backåkra.</p>
 						</div>
 					</div>
 				</div>
