services link fix

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -102,7 +102,7 @@
 		<div class="content">
 			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
-				<li><a href="/#erbjudande">Vårt erbjudande</a></li>
+				<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 				<br>
 				<br>
 				<li><a href="../kontakt/">Kontakt</a></li>
