--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -79,7 +79,7 @@
 			</div>
 			<div class="right">
 				<ul class="menu crop small bold">
-					<li><a href="/#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="../karriar/">Karriär</a></li>
 					<li><a href="../kontakt/" class="text-blue">Kontakt</a></li>
 				</ul>
@@ -99,7 +99,7 @@
 		<div class="content">
 			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
-				<li><a href="/#erbjudande">Vårt erbjudande</a></li>
+				<li><a href="../#erbjudande">Vårt erbjudande</a></li>
 				<br>
 				<br>
 				<li><a href="../kontakt/">Kontakt</a></li>
